# blastro

./: .gitignore  AGENTS.md  CMakeLists.txt  DEVELOPING.md  Developing.md  README.md  TODO.md  Usage.md  main.cpp  patch_stretching.py  test_event.patch  test_mdi  test_mdi.cpp  test_mdi2  test_mdi2.cpp  test_mdi3  test_mdi3.cpp  test_runner.patch  test_ui.patch
algorithms/: Algorithm.cpp  Algorithm.h  AlignAlgorithm.cpp  AlignAlgorithm.h  BackgroundExtractionAlgorithm.cpp  BackgroundExtractionAlgorithm.h  BackgroundExtractor.cpp  BackgroundExtractor.h  CMakeLists.txt  CalibrationAlgorithm.cpp  CalibrationAlgorithm.h  ConstellationMatcher.cpp  ConstellationMatcher.h  DebayerAlgorithm.cpp  DebayerAlgorithm.h  GhsAlgorithm.cpp  GhsAlgorithm.h  GhsAlgorithmWrapper.cpp  GhsAlgorithmWrapper.h  ImageOperations.cpp  ImageOperations.h  PixelMathAlgorithm.cpp  PixelMathAlgorithm.h  PlatesolveAlgorithm.cpp  PlatesolveAlgorithm.h  PreprocessingPipeline.cpp  PreprocessingPipeline.h  RegisterAlgorithm.cpp  RegisterAlgorithm.h  Solver.cpp  Solver.h  StackingAlgorithm.cpp  StackingAlgorithm.h  StarFinder.cpp  StarFinder.h  StarFindingAlgorithm.cpp  StarFindingAlgorithm.h  StretchingAlgorithm.cpp  StretchingAlgorithm.h  StretchingAlgorithmWrapper.cpp  (+3 more)
core/: CMakeLists.txt  GrayscaleImage.cpp  GrayscaleImage.h  ImageBatch.cpp  ImageBatch.h  ImageBuffer.cpp  ImageBuffer.h  ImageMetadata.h  Logger.cpp  Logger.h  MathUtils.cpp  MathUtils.h  PCLBridge.cpp  PCLBridge.h  PCLStubs.cpp  PCLStubs.h  Preferences.cpp  Preferences.h  ProjectDataSerializer.cpp  ProjectDataSerializer.h  ProjectSerializer.cpp  ProjectSerializer.h  RGBImage.cpp  RGBImage.h  Star.h  TempDirectory.cpp  TempDirectory.h  WorkspaceRegistry.cpp  WorkspaceRegistry.h  generate_stubs.py
docs/: algorithms.md  architecture.md  pcl_bridge.md  preprocessing_pipeline.md  ui_guidelines.md
io/: CMakeLists.txt  FitsIO.cpp  FitsIO.h  ImageReader.cpp  ImageReader.h  ImageWriter.cpp  ImageWriter.h  QtImageIO.cpp  QtImageIO.h
test_project/: project.json
tests/: generate_gradient_fits.py  test_algorithms.cpp
ui/: AlgorithmDialog.cpp  AlgorithmDialog.h  AlignDialog.cpp  AlignDialog.h  BackgroundExtractionDialog.cpp  BackgroundExtractionDialog.h  BatchFilterDialog.cpp  BatchFilterDialog.h  BatchImageWidget.cpp  BatchImageWidget.h  CMakeLists.txt  CalibrationDialog.cpp  CalibrationDialog.h  CurvesWidget.cpp  CurvesWidget.h  DebayerDialog.cpp  DebayerDialog.h  GhsDialog.cpp  GhsDialog.h  GhsWidget.cpp  GhsWidget.h  HistogramBaseWidget.cpp  HistogramBaseWidget.h  HistogramWidget.cpp  HistogramWidget.h  HtWidget.cpp  HtWidget.h  ImageView.cpp  ImageView.h  LogWindow.cpp  LogWindow.h  MainWindow.cpp  MainWindow.h  PixelMathDialog.cpp  PixelMathDialog.h  PlatesolveDialog.cpp  PlatesolveDialog.h  PreferencesWindow.cpp  PreferencesWindow.h  PreprocessingWizardDialog.cpp  (+21 more)
